@@ -6,6 +6,10 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog^], 
 
 == Unreleased
 
+=== Fixed
+
+- Consider also the image dimensions to determine the orientation, even if the tag is present
+
 == 0.5.0 - 2021-08-16
 
 === Added
